--- a/my-app/1-deployment.yaml
+++ b/my-app/1-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: chysome/nginx:v0.1.1
+          image: chysome/nginx:0.1.1
 
           ports:
             - containerPort: 80
