create app of apps pattern

--- a/environments/staging/apps/second-app.yaml
+++ b/environments/staging/apps/second-app.yaml
@@ -1,6 +1,6 @@
 kind: Application
 metadata:
-  name: my-app
+  name: second-app-bar
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
